--- a/css/akadeemia_dev_old.css
+++ b/css/akadeemia_dev_old.css
@@ -237,8 +237,9 @@ header .ap-icon-facebook {
   z-index: 100;
 }
 header .ap-icon-facebook:hover {
-  color: #47629c;
+  color: #fff !important;
 }
+
 header .burger {
   width: 72px;
   height: 72px;
