--- a/css/critical.css
+++ b/css/critical.css
@@ -278,7 +278,7 @@ header .ap-icon-facebook {
   display: none;
   position: absolute;
   top: 20px;
-  //right:20px;
+  /* //right:20px; */
   left: 20px;
   font-size: 30px;
   color: #fff;
@@ -288,7 +288,7 @@ header .burger {
   width: 72px;
   height: 72px;
   top: 0;
-  //left:0;
+  /* //left:0; */
   right: 0;
   position: absolute;
   z-index: 999;
@@ -451,15 +451,15 @@ header .search span:nth-child(2) {
 .row-table .table-cell p {
   margin-bottom: 15px;
 }
-.row-table .table-cell.date {
+/* .row-table .table-cell.date { */
   /*width:49%;*/
-  //padding:15px 0 0 15px;
+  /* //padding:15px 0 0 15px; */
   /*white-space:nowrap*/
-}
+/* } */
 .row-table .table-cell.title {
   display: block;
   width: 100%;
-  //padding:0 30px 0 15px;
+  /* //padding:0 30px 0 15px; */
 }
 .row-table .table-cell.trainer {
   position: absolute;
@@ -608,9 +608,9 @@ header .search span:nth-child(2) {
     /* //vertical-align:middle; */
     display: inline-block;
   }
-  .row-table .table-cell h3 {
+  /* .row-table .table-cell h3 { */
     /* //margin-top:20px; */
-  }
+  /* } */
   .row-table .table-cell.date {
     width: 13.02%;
     /* //padding:0 0 0 30px; */
@@ -712,7 +712,7 @@ header .search span:nth-child(2) {
   .row-table .table-cell.title {
     display: inline-block;
     width: 47.33%;
-    //padding:0
+    /* //padding:0 */
   }
   .row-table .table-cell.duration {
     width: 12.29%;
