Asko changes uuesti

--- a/css/akadeemia.css
+++ b/css/akadeemia.css
@@ -167,7 +167,7 @@
   .col-lg-offset-2{margin-left:16.66666667%}.col-lg-offset-1{margin-left:8.33333333%}
   .col-lg-offset-0{margin-left:0}
   .site-search {
-     width: 875px;
+     width: 100%;
   }
   .site-search-hr {
     width: 875px;
@@ -559,7 +559,7 @@ input:focus::-webkit-input-placeholder {
   color: #8a8a8a;
  }
  .site-search {
-    width: 875px;
+    width: 100%;
     height: 30px;
     font-family: Roboto;
     font-size: 18px;
@@ -623,13 +623,10 @@ input:focus::-webkit-input-placeholder {
   padding: 16px 18px 20px 18px;
   box-shadow: 0 0 10px 0 rgba(138, 138, 138, 0.2);
   position:relative;
-  top:2px;
+  top:15px;
   content:"\e904";
   color: #8a8a8a;
   -webkit-text-stroke: 1px white;
-  z-index:-100;
-  background-color:#fefefe;
-  
  }
  .site-search-hr {
    margin-top: 0px;
@@ -790,12 +787,23 @@ nav ul li:nth-last-child(2) {
   margin-top:60px;
 }
 
-.no-trainings-message {
+.nr-of-trainings-message {
   text-align:center;
   padding-top:30px;
   padding-bottom:20px;
   font-style:Roboto;
   font-weight:500;
+}
+
+.input-group {
+  margin-left:7%;
+  width:86%;
+}
+.input-group-addon {
+  background-color:transparent;
+  border-color:transparent;
+  vertical-align:top;
+  padding:0;
 }
 
 @media (max-width:425px){
@@ -816,9 +824,6 @@ nav ul li:nth-last-child(2) {
   .btn-site-search-span:before {
     position: relative;
     top: 15px;
-    right: 25px;
-    z-index:-100;
-    background-color:#fefefe;
   }
  }
 
@@ -839,6 +844,11 @@ nav ul li:nth-last-child(2) {
  }
 
  @media (max-width:768px){
+
+  .input-group {
+    margin-left:0%;
+    width:100%;
+  }
 
   .row-table .table-cell.short-description{
     width: 95%;
@@ -885,8 +895,6 @@ nav ul li:nth-last-child(2) {
  .btn-site-search-span:before {
   padding: 6px 6px 6px 6px;
   box-shadow: 0 0 10px 0 rgba(138, 138, 138, 0.2);
-  z-index:-100;
-  background-color:#fefefe;
  }
 
  .form--sendMail {
@@ -919,6 +927,13 @@ nav ul li:nth-last-child(2) {
 .row-intro p {
   margin-bottom:20px;
 }
+
+/* @media (min-width: 691px) and (max-width: 1152px) {
+  .btn-site-search-span:before {
+    position: relative;
+    top: 5px ;
+  }
+} */
 
  @media (max-width:550px) {
   .site-search-category_holder {
@@ -988,7 +1003,7 @@ nav ul li:nth-last-child(2) {
      padding: 20px 40px 20px 6px;
    }
    .site-search {
-      width: 635px;
+      width: 100%;
    }
    .site-search-hr {
     width: 90%;
@@ -1002,9 +1017,9 @@ nav ul li:nth-last-child(2) {
     display: none !important;
   } */
  }
- @media (max-width:720px){
+ /* @media (max-width:720px){
    .site-search {
-      width: 555px;
+      width: 100%;
    }
    .site-search-hr {
     width: 90%;
@@ -1012,7 +1027,7 @@ nav ul li:nth-last-child(2) {
  }
  @media (max-width:640px){
    .site-search {
-      width: 505px;
+      width: 100%;
    }
    .site-search-hr {
     width: 90%;
@@ -1025,7 +1040,7 @@ nav ul li:nth-last-child(2) {
    .site-search-hr {
      width: 90%;
    }
- }
+ } */
  @media (min-width:768px) and (max-width:991px){
    .hidden-sm{display:none!important}
  }
@@ -1310,7 +1325,9 @@ nav ul li:nth-last-child(2) {
   header h1.indent {
     /*text-indent:0;*/
     /*background:url(/wp-content/themes/Akadeemia/img/logo_akadeemia_mobile.png) 20px 10px/contain no-repeat;*/
-    background:url(/wp-content/themes/Akadeemia/img/logo_akadeemia_mobile.png) 0px 0px/contain no-repeat;    
+    background:url(/wp-content/themes/Akadeemia/img/logo_akadeemia_mobile.png);
+    background-repeat: no-repeat;
+    background-size: 240px 45px;
     margin-left: 7px;
 
   }
@@ -1799,7 +1816,7 @@ footer,footer a{
        display: none;
      }
      .site-search {
-        width: 80%;
+        width: 100%;
      }
      .site-search-hr {
        width: 95%;
@@ -1832,7 +1849,7 @@ footer,footer a{
 
  }
 
- @media (min-width:1000px)
+ /* @media (min-width:1000px)
  {
    .site-search {
       width: 80%;
@@ -1840,7 +1857,7 @@ footer,footer a{
    .site-search-hr {
     width: 570px;
    }
- }
+ } */
 
  @media (min-width:768px) and (max-width:1490px)
  {
@@ -1969,12 +1986,12 @@ footer,footer a{
     background-color: #a71617;
     border-bottom: 1px solid #a71617
   }
-  .site-search {
+  /* .site-search {
      width: 85%;
   }
   .site-search-hr {
     width: 98%;
-  }
+  } */
   .btn-site-search-span {
     position: absolute;
     top: -10px;
