--- a/css/akadeemia.css
+++ b/css/akadeemia.css
@@ -627,6 +627,8 @@ input:focus::-webkit-input-placeholder {
   content:"\e904";
   color: #8a8a8a;
   -webkit-text-stroke: 1px white;
+  Z-INDEX: -100;
+  background-color: #fefefe;
  }
  .site-search-hr {
    margin-top: 0px;
@@ -895,6 +897,7 @@ nav ul li:nth-last-child(2) {
  .btn-site-search-span:before {
   padding: 6px 6px 6px 6px;
   box-shadow: 0 0 10px 0 rgba(138, 138, 138, 0.2);
+  z-index:0;
  }
 
  .form--sendMail {
