--- a/css/akadeemia.css
+++ b/css/akadeemia.css
@@ -559,6 +559,10 @@ input:focus::-webkit-input-placeholder {
    color: #8a8a8a;
  }
 
+ #trainer-footer footer{
+  margin-left: -199px;
+}
+
  .trainer-footer span a:active, a:focus, a{
   color: #8a8a8a;
  }
@@ -726,7 +730,7 @@ input:focus::-webkit-input-placeholder {
 .site-search-date_delete {
   cursor: pointer;
   position: relative;
-  right: 25px;
+  right: 28px;
 }
 
 .form--sendMail {
@@ -812,6 +816,18 @@ nav ul li:nth-last-child(2) {
   padding:0;
 }
 
+@media (min-width:460px) {
+  .btn-site-search-span::before {
+    top:4px;
+  }
+}
+
+@media (min-width:768px) {
+   .btn-site-search-span::before {
+    top:15px;
+  }
+}
+
 @media (max-width:425px){
   .site-search-date_holder {
     width:100%;
@@ -832,11 +848,10 @@ nav ul li:nth-last-child(2) {
     top: 15px;
   }
  }
- @media (max-width:427px){
+ @media (max-width:428px){
   .site-search-date_holder {
-    width:80%;
-    //margin-left:15%;
-    height: 100px;
+    width:100%;
+    height: 115px;
     margin-bottom: -100px;
     position: relative;
     left: 0%;
@@ -845,11 +860,21 @@ nav ul li:nth-last-child(2) {
     padding-left:0px !important;
   }
   .site-search-category_holder {
-    height: 120px;
+    width:100%;
+    height: 115px;
     text-align:left;
-    //margin-left:15%;
-    width:75%;
   } 
+
+  .site-search-date {
+    width:72% !important;
+  }
+  .site-search-category {
+    width:75% !important;
+  }
+
+  .site-search-date_delete  {
+    right:28px !important;
+  }
   .btn-site-search-span:before {
     position: relative;
     top: 15px;
@@ -873,6 +898,9 @@ nav ul li:nth-last-child(2) {
  }
 
  @media (max-width:768px){
+  .site-search-date_delete {
+    right:25px;
+  }
 
   .input-group {
     margin-left:0%;
@@ -951,7 +979,7 @@ nav ul li:nth-last-child(2) {
 }
 
 .row-table .table-row .table-cell.more {
-  padding-top:32px;
+  padding-top: 1.5em;
 }
 
 .row-intro p {
@@ -1546,11 +1574,11 @@ nav ul li:nth-last-child(2) {
   .row-internal-schooling .bg{height:270px;margin-top:130px}
 
   .site-search-category{
-    width: 95%;
+    width: 170px;
   }
 
   .site-search-date {
-    width: 85%;
+    width: 170px;
     font-size: 13px;
   }
   .site-search-date::placeholder{
