--- a/css/akadeemia.css
+++ b/css/akadeemia.css
@@ -27,6 +27,16 @@
   display: none;
 }
 
+.ap-icon-delete:before{
+  content:"\e906";
+  font-size: 16px;
+  color: #8a8a8a;
+  position:relative;
+  top:2px;
+  right:8px;
+  -webkit-text-stroke: 1px #FEFEFE;
+}
+
 @media (max-width:768px) {
   #footer-text a {
     font-size:14px;
@@ -666,7 +676,7 @@ input:focus::-webkit-input-placeholder {
   font-weight:500;
 }
 .site-search-category_holder{
-  width: 50%;
+  width: 45%;
   height: 65px;
   position: relative;
   text-align: right;
@@ -674,7 +684,7 @@ input:focus::-webkit-input-placeholder {
 }
 
 .site-search-date_holder {
-  width: 50%;
+  width: 55%;
   position: relative;
   left: 50%;
   height: 65px;
@@ -696,7 +706,7 @@ input:focus::-webkit-input-placeholder {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  background: url(https://i.gyazo.com/bc3bc86e4effba4b08a17b3db1eb8d53.png) no-repeat right center;
+  background: url(../img/down-arrow.png) no-repeat right center;
 }
 
 .site-search-date {
@@ -709,18 +719,23 @@ input:focus::-webkit-input-placeholder {
   margin: 0px 10px 65px 0px;
   text-align: center;
   font-family: Roboto;
+  padding-right:10px;
 }
 .site-search-date::placeholder{
   font-size:14px;
   font-weight:400;
   font-style: normal;
   padding-left: 20px;
-  background: url(https://i.gyazo.com/754bdef37d34b34f89ed698f890ad590.png) no-repeat left center;
-  text-align:center; 
+  background: url(../img/calendar.png) no-repeat left center;
+  text-align:center;
+  color:#424242;
+  padding-left:20px;
 }
 
 .site-search-category_holder select{
-  text-align: center; 
+  text-align: center;  
+  text-align-last:center;
+  padding-right:20px;
 }
 
 .site-search-category select, select option {
@@ -825,6 +840,9 @@ nav ul li:nth-last-child(2) {
 @media (min-width:768px) {
    .btn-site-search-span::before {
     top:15px;
+  }
+  .site-search-date {
+    width: 200px;
   }
 }
 
@@ -1160,7 +1178,7 @@ nav ul li:nth-last-child(2) {
  .ap-icon-arrow-l:before{content:"\e903"}
  .ap-icon-arrow-r:before{content:"\e902"}
  .ap-icon-arrow-a:before{content:"\e900"}
- .ap-icon-facebook:before{content:"\e901";font-size: 19px;}@-o-viewport{width:device-width;user-zoom:fixed}@viewport{width:device-width;user-zoom:fixed}html{position:relative;min-height:100%}
+ .ap-icon-facebook:before{background-image:url(../img/flogo-HexRBG-Wht-72.png);background-size: 20px 20px; font-size:19px; color:transparent;}@-o-viewport{width:device-width;user-zoom:fixed}@viewport{width:device-width;user-zoom:fixed}html{position:relative;min-height:100%}
  body{
    background-color:#FEFEFE;
    overflow-x:hidden;font-family:Roboto;
@@ -1578,7 +1596,7 @@ nav ul li:nth-last-child(2) {
   }
 
   .site-search-date {
-    width: 170px;
+    width: 180px;
     font-size: 13px;
   }
   .site-search-date::placeholder{
@@ -1742,7 +1760,7 @@ footer,footer a{
        -moz-transform:none;-ms-transform:none;transform:none;top:-600px;
        left:-425px;bottom:0
      }
-     header.vertical .ap-icon-facebook{margin-left:28px}
+     header.vertical .ap-icon-facebook{margin-left:29px}
      header.vertical:not(.slant) .ap-icon-facebook{color:#fff}
      header.vertical:not(.slant) .ap-icon-facebook:hover{color:#fff}
      header.vertical.slant .bg-slant{background:#fff}
